--- a/game.html
+++ b/game.html
@@ -19,6 +19,7 @@
         <div id="messageGameOverDiv">
           <p id="messageGameOverP">GAME OVER</p>
         </div>
+       
         <div class="coins">
           <p>
             <img src="images/eggs.png" alt="coin" id="coin-image">
@@ -31,10 +32,12 @@
         </div>
       </div>
     </div>
-    <script  src="game.js"></script> 
-    <script  src="./classes/Player.js"></script>
+
+     <script  src="game.js"></script> 
+     <script  src="./classes/Player.js"></script>
      <script  src="./classes/Egg.js"></script>
      <script src="./classes/Enemy.js"></script>
+     <script src="./classes/PowerCoin.js"></script>
 
   </body>
 </html>
